# FAE

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  repo.md  requirements.txt  requirements_cluster.txt  summary.md
arxiv/: README.md
arxiv/dead_scripts/: sparse.py
arxiv/docs/: DATA.md
benchmarks/: README.md  __init__.py  smoke_test.py
benchmarks/mae/: mae.py
configs/: base.yaml  fae_ns.yaml  jepa_ns.yaml  mae_ns.yaml
data_gen/: gen_g1_all.py  visualize_1d.py
docs/: CLEANUP_MANIFEST.md  FAE.md  MIGRATION.md  NS_EXPERIMENTS.md  RESULTS.md  STRUCTURE.md  cluster_setup.sh
results/: campaign_12h.md  experiments.csv  fjepa_campaign.md  fjepa_feedback.md  fjepa_summary.md
scripts/: _sanity_baselines.py  collapse_check.py  collapse_check.slurm  diag_dimension.py  diag_time_invariance.py  download_flowbench.slurm  download_shear_flow.slurm  env.sh  eval_anchored.py  eval_attentive.py  eval_baseline_readout.py  eval_battery.py  eval_battery_base.py  eval_fae_np.py  eval_fae_np_ensemble.py  eval_fae_np_generation.py  eval_flowbench_cd.py  eval_gen_all.py  eval_linear_probe.py  eval_loss_terms.py  eval_lowshot.py  eval_ns_diag.py  eval_ns_floor.py  eval_ns_probe.py  eval_ns_theirs.py  eval_pod_rank.py  eval_readout.py  eval_recon_channels.py  forecast.slurm  gen_sw.py  gen_sw.slurm  generate.py  gpu.slurm  plot_training_curves.py  prep_typhoon.py  prep_typhoon.slurm  probe_all.py  rollout_ns.py  run.py  run_ablation_eval.slurm  (+71 more)
slurm/: fpo_pretrain.slurm  ns.slurm  ns_rollout_save.slurm
src/: config.py  deeponet.py  encoders.py  eval.py  fno.py  plotstyle.py
(+285 files in other folders)
